--- a/css/styles.css
+++ b/css/styles.css
@@ -62,3 +62,16 @@ p {
 .nav-link {
   font-size: 1.1rem;
 }
+#btnScrollTop {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: none;
+  z-index: 1000;
+  width: 45px;
+  height: 45px;
+  font-size: 1.5rem;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
